feature/orgs merge (#2234)
Co-authored-by: Andrei Piankouski <andrei_piankouski@epam.com>
Co-authored-by: APiankouski <109206864+APiankouski@users.noreply.github.com>
Co-authored-by: Reingold Shekhtel <13565058+raikbitters@users.noreply.github.com>
Co-authored-by: Pavel_Bortnik <pavel_bortnik@epam.com>
Co-authored-by: raikbitters <raikbitters@gmail.com>