@@ -49,6 +49,7 @@ import com.epam.ta.reportportal.core.item.ExternalTicketHandler;
 import com.epam.ta.reportportal.core.item.TestItemService;
 import com.epam.ta.reportportal.core.item.UpdateTestItemHandler;
 import com.epam.ta.reportportal.core.item.impl.status.StatusChangingStrategy;
+import com.epam.ta.reportportal.core.project.ProjectService;
 import com.epam.ta.reportportal.dao.IssueEntityRepository;
 import com.epam.ta.reportportal.dao.ProjectRepository;
 import com.epam.ta.reportportal.dao.TestItemRepository;
@@ -60,6 +61,8 @@ import com.epam.ta.reportportal.entity.item.TestItem;
 import com.epam.ta.reportportal.entity.item.issue.IssueEntity;
 import com.epam.ta.reportportal.entity.item.issue.IssueType;
 import com.epam.ta.reportportal.entity.launch.Launch;
+import com.epam.ta.reportportal.entity.organization.MembershipDetails;
+import com.epam.ta.reportportal.entity.organization.OrganizationRole;
 import com.epam.ta.reportportal.entity.project.Project;
 import com.epam.ta.reportportal.entity.project.ProjectRole;
 import com.epam.ta.reportportal.entity.user.UserRole;
@@ -122,6 +125,8 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
   private final Map<StatusEnum, StatusChangingStrategy> statusChangingStrategyMapping;
 
   private final DefectUpdateStatisticsService defectUpdateStatisticsService;
+  private final ProjectService projectService;
+
 
 
   @Autowired
@@ -131,7 +136,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
       MessageBus messageBus, LogIndexerService logIndexerService,
       IssueEntityRepository issueEntityRepository,
       Map<StatusEnum, StatusChangingStrategy> statusChangingStrategyMapping,
-      DefectUpdateStatisticsService defectUpdateStatisticsService) {
+      DefectUpdateStatisticsService defectUpdateStatisticsService, ProjectService projectService) {
     this.testItemService = testItemService;
     this.projectRepository = projectRepository;
     this.testItemRepository = testItemRepository;
@@ -142,13 +147,14 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
     this.issueEntityRepository = issueEntityRepository;
     this.statusChangingStrategyMapping = statusChangingStrategyMapping;
     this.defectUpdateStatisticsService = defectUpdateStatisticsService;
+    this.projectService = projectService;
   }
 
   @Override
-  public List<Issue> defineTestItemsIssues(ReportPortalUser.ProjectDetails projectDetails,
+  public List<Issue> defineTestItemsIssues(MembershipDetails membershipDetails,
       DefineIssueRQ defineIssue, ReportPortalUser user) {
-    Project project = projectRepository.findById(projectDetails.getProjectId()).orElseThrow(
-        () -> new ReportPortalException(PROJECT_NOT_FOUND, projectDetails.getProjectId()));
+    Project project = projectRepository.findById(membershipDetails.getProjectId()).orElseThrow(
+        () -> new ReportPortalException(PROJECT_NOT_FOUND, membershipDetails.getProjectId()));
 
     List<String> errors = new ArrayList<>();
     List<IssueDefinition> definitions = defineIssue.getIssues();
@@ -161,7 +167,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
 
     // save data for analytics
     defectUpdateStatisticsService.saveUserAnalyzedDefectStatistics(definitions.size(),
-        projectDetails.getProjectId());
+        membershipDetails.getProjectId());
 
     definitions.forEach(issueDefinition -> {
       try {
@@ -173,11 +179,11 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
 
         verifyTestItem(testItem, issueDefinition.getId());
         TestItemActivityResource before =
-            TO_ACTIVITY_RESOURCE.apply(testItem, projectDetails.getProjectId());
+            TO_ACTIVITY_RESOURCE.apply(testItem, membershipDetails.getProjectId());
 
         Issue issue = issueDefinition.getIssue();
         IssueType issueType =
-            issueTypeHandler.defineIssueType(projectDetails.getProjectId(), issue.getIssueType());
+            issueTypeHandler.defineIssueType(membershipDetails.getProjectId(), issue.getIssueType());
 
         IssueEntity issueEntity =
             new IssueEntityBuilder(testItem.getItemResults().getIssue()).addIssueType(issueType)
@@ -200,10 +206,10 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
         updated.add(IssueConverter.TO_MODEL.apply(issueEntity));
 
         TestItemActivityResource after =
-            TO_ACTIVITY_RESOURCE.apply(testItem, projectDetails.getProjectId());
+            TO_ACTIVITY_RESOURCE.apply(testItem, membershipDetails.getProjectId());
 
-        events.add(
-            new ItemIssueTypeDefinedEvent(before, after, user.getUserId(), user.getUsername()));
+        events.add(new ItemIssueTypeDefinedEvent(before, after, user.getUserId(), user.getUsername(),
+            membershipDetails.getOrgId()));
       } catch (BusinessRuleViolationException e) {
         errors.add(e.getMessage());
       }
@@ -225,12 +231,12 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
 
 
   @Override
-  public OperationCompletionRS updateTestItem(ReportPortalUser.ProjectDetails projectDetails,
+  public OperationCompletionRS updateTestItem(MembershipDetails membershipDetails,
       Long itemId, UpdateTestItemRQ rq, ReportPortalUser user) {
     TestItem testItem = testItemRepository.findById(itemId)
         .orElseThrow(() -> new ReportPortalException(ErrorType.TEST_ITEM_NOT_FOUND, itemId));
 
-    validate(projectDetails, user, testItem);
+    validate(membershipDetails, user, testItem);
 
     Optional<StatusEnum> providedStatus = StatusEnum.fromValue(rq.getStatus());
     if (providedStatus.isPresent() && !providedStatus.get()
@@ -247,10 +253,10 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
           )
       );
       TestItemActivityResource before =
-          TO_ACTIVITY_RESOURCE.apply(testItem, projectDetails.getProjectId());
+          TO_ACTIVITY_RESOURCE.apply(testItem, membershipDetails.getProjectId());
       strategy.changeStatus(testItem, providedStatus.get(), user, true);
       messageBus.publishActivity(new TestItemStatusChangedEvent(before,
-          TO_ACTIVITY_RESOURCE.apply(testItem, projectDetails.getProjectId()), user.getUserId(),
+          TO_ACTIVITY_RESOURCE.apply(testItem, membershipDetails.getProjectId()), user.getUserId(),
           user.getUsername()
       ));
     }
@@ -263,7 +269,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
 
   @Override
   public List<OperationCompletionRS> processExternalIssues(ExternalIssueRQ request,
-      ReportPortalUser.ProjectDetails projectDetails, ReportPortalUser user) {
+      MembershipDetails membershipDetails, ReportPortalUser user) {
     List<String> errors = new ArrayList<>();
 
     List<TestItem> testItems = testItemRepository.findAllById(request.getTestItemIds());
@@ -279,7 +285,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
         FAILED_TEST_ITEM_ISSUE_TYPE_DEFINITION, errors.toString());
 
     List<TestItemActivityResource> before =
-        testItems.stream().map(it -> TO_ACTIVITY_RESOURCE.apply(it, projectDetails.getProjectId()))
+        testItems.stream().map(it -> TO_ACTIVITY_RESOURCE.apply(it, membershipDetails.getProjectId()))
             .collect(Collectors.toList());
 
     if (LinkExternalIssueRQ.class.equals(request.getClass())) {
@@ -295,8 +301,9 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
     }
     testItemRepository.saveAll(testItems);
     List<TestItemActivityResource> after =
-        testItems.stream().map(it -> TO_ACTIVITY_RESOURCE.apply(it, projectDetails.getProjectId()))
-            .collect(Collectors.toList());
+        testItems.stream()
+            .map(it -> TO_ACTIVITY_RESOURCE.apply(it, membershipDetails.getProjectId()))
+            .toList();
 
     before.forEach(it -> messageBus.publishActivity(new LinkTicketEvent(it,
         after.stream().filter(t -> t.getId().equals(it.getId())).findFirst().get(),
@@ -332,6 +339,7 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
 
   @Override
   public void resetItemsIssue(List<Long> itemIds, Long projectId, ReportPortalUser user) {
+    var project = projectService.findProjectById(projectId);
     itemIds.forEach(itemId -> {
       TestItem item = testItemRepository.findById(itemId)
           .orElseThrow(() -> new ReportPortalException(TEST_ITEM_NOT_FOUND, itemId));
@@ -351,7 +359,8 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
       if (!StringUtils.equalsIgnoreCase(
           before.getIssueTypeLongName(), after.getIssueTypeLongName())) {
         ItemIssueTypeDefinedEvent event =
-            new ItemIssueTypeDefinedEvent(before, after, user.getUserId(), user.getUsername());
+            new ItemIssueTypeDefinedEvent(before, after, user.getUserId(), user.getUsername(),
+                project.getOrganizationId());
         messageBus.publishActivity(event);
       }
     });
@@ -359,9 +368,9 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
 
   @Override
   public OperationCompletionRS bulkInfoUpdate(BulkInfoUpdateRQ bulkUpdateRq,
-      ReportPortalUser.ProjectDetails projectDetails) {
-    expect(projectRepository.existsById(projectDetails.getProjectId()), equalTo(TRUE)).verify(
-        PROJECT_NOT_FOUND, projectDetails.getProjectId());
+      MembershipDetails membershipDetails) {
+    expect(projectRepository.existsById(membershipDetails.getProjectId()), equalTo(TRUE)).verify(
+        PROJECT_NOT_FOUND, membershipDetails.getProjectId());
 
     List<TestItem> items = testItemRepository.findAllById(bulkUpdateRq.getIds());
     items.forEach(
@@ -402,18 +411,20 @@ public class UpdateTestItemHandlerImpl implements UpdateTestItemHandler {
   /**
    * Validates test item access ability.
    *
-   * @param projectDetails Project
+   * @param membershipDetails Membership details
    * @param user           User
    * @param testItem       Test Item
    */
-  private void validate(ReportPortalUser.ProjectDetails projectDetails, ReportPortalUser user,
+  private void validate(MembershipDetails membershipDetails, ReportPortalUser user,
       TestItem testItem) {
     Launch launch = testItemService.getEffectiveLaunch(testItem);
     if (user.getUserRole() != UserRole.ADMINISTRATOR) {
-      expect(launch.getProjectId(), equalTo(projectDetails.getProjectId())).verify(ACCESS_DENIED,
+      expect(launch.getProjectId(), equalTo(membershipDetails.getProjectId())).verify(ACCESS_DENIED,
           "Launch is not under the specified project."
       );
-      if (projectDetails.getProjectRole().lowerThan(ProjectRole.PROJECT_MANAGER)) {
+
+      if (membershipDetails.getOrgRole().lowerThan(OrganizationRole.MANAGER)
+          && membershipDetails.getProjectRole().equals(ProjectRole.VIEWER)) {
         expect(user.getUserId(), Predicate.isEqual(launch.getUserId())).verify(
             ACCESS_DENIED, "You are not a launch owner.");
       }
